--- a/e2e/npm_packages/package.json
+++ b/e2e/npm_packages/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "devDependencies": {
+    "@e2e/lib": "workspace:*",
     "@vitest/coverage-v8": "^1.5.0",
+    "vite": "^5.2.9",
     "vitest": "^1.5.0"
   }
 }
