--- a/e2e/npm_packages/packages/wrapper-lib/BUILD.bazel
+++ b/e2e/npm_packages/packages/wrapper-lib/BUILD.bazel
@@ -38,9 +38,8 @@ js_library(
 # Vitest test runners
 vitest_test(
     name = "test_cjs",
-    config = "//:vitest.config.cjs",
+    config = "//:vitest_config",
     data = [
-        "babel.config.json",
         ":wrapper-lib_tests",
     ],
     node_modules = "//:node_modules",
@@ -48,7 +47,7 @@ vitest_test(
 
 vitest_test(
     name = "test_esm",
-    config = "//:vitest.config.esm",
+    config = "//:vitest_config",
     data = [
         "package.json",  # required for vitest to determine this package .js is esm
         ":wrapper-lib_tests",
