--- a/.aspect/bazelrc/BUILD.bazel
+++ b/.aspect/bazelrc/BUILD.bazel
@@ -2,4 +2,14 @@
 
 load("@aspect_bazel_lib//lib:bazelrc_presets.bzl", "write_aspect_bazelrc_presets")
 
-write_aspect_bazelrc_presets(name = "update_aspect_bazelrc_presets")
+write_aspect_bazelrc_presets(
+    name = "update_aspect_bazelrc_presets",
+    presets = [
+        "ci",
+        "convenience",
+        "correctness",
+        "debug",
+        "javascript",
+        "performance",
+    ],
+)
