--- a/vitest/BUILD.bazel
+++ b/vitest/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@aspect_bazel_lib//lib:utils.bzl", bazel_lib_utils = "utils")
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
 # For stardoc to reference the files
@@ -20,7 +21,7 @@ bzl_library(
         "@aspect_bazel_lib//lib:copy_file",
         "@aspect_bazel_lib//lib:directory_path",
         "@aspect_bazel_lib//lib:utils",
-    ],
+    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else []),
 )
 
 bzl_library(
