fix(#18): added mjs snapshot example

--- a/.bazelignore
+++ b/.bazelignore
@@ -2,4 +2,5 @@ e2e/
 node_modules
 example/node_modules
 example/snapshots_files/node_modules
+example/snapshots_mjs/node_modules
 vitest/tests/node_modules
