--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "private": true,
   "devDependencies": {
     "@vitest/coverage-istanbul": "1.4.0",
+    "@vitest/coverage-v8": "1.4.0",
     "jsdom": "^24.0.0",
     "vitest": "1.4.0"
   },
   "dependencies": {
     "react": "^18.2.0",
     "vite": "^5.2.8"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies" : {
+
+    }
   }
 }
