feat: add local repo for case4

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -25,3 +25,10 @@ npm.npm_translate_lock(
     verify_node_modules_ignored = "//:.bazelignore",
 )
 use_repo(npm, "npm")
+
+local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")
+
+local_repository(
+    name = "case4",
+    path = "e2e/case4",
+)
