--- a/.github/workflows/BUILD.bazel
+++ b/.github/workflows/BUILD.bazel
@@ -2,8 +2,10 @@ load("@aspect_bazel_lib//lib:bazelrc_presets.bzl", "write_aspect_bazelrc_presets
 
 write_aspect_bazelrc_presets(
     name = "update_aspect_bazelrc_presets",
+    diff_test = False,
     presets = [
         "bazel6",
         "bazel7",
+        "bazel8",
     ],
 )
