--- a/docs/BUILD.bazel
+++ b/docs/BUILD.bazel
@@ -7,9 +7,13 @@ stardoc_with_diff_test(
     name = "vitest_test",
     bzl_library_target = "//vitest:defs",
     symbol_names = ["vitest_test"],
+    tags = ["skip-on-bazel6"],
 )
 
-update_docs(name = "update")
+update_docs(
+    name = "update",
+    tags = ["skip-on-bazel6"],
+)
 
 # Demonstration delivery target for Aspect Workflows.
 # In the future this could be wired up to push to a demonstration S3 bucket.
