--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,7 @@ jobs:
           m=${v::1}
           a=(
             "major:$m, version:\"$v\""
+            "major:7, version:\"7.7.1\""
             "major:6, version:\"6.5.0\""
           )
           printf -v j '{%s},' "${a[@]}"
