--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "private": true,
   "devDependencies": {
-    "@vitest/coverage-istanbul": "4.0.15",
-    "@vitest/coverage-v8": "4.0.15",
-    "jsdom": "27.2.0",
-    "vitest": "4.0.15"
+    "@vitest/coverage-istanbul": "1.4.0",
+    "@vitest/coverage-v8": "1.4.0",
+    "jsdom": "^24.0.0",
+    "vitest": "1.4.0"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "vite": "7.2.2"
+    "vite": "^5.2.8"
   },
   "pnpm": {
-    "onlyBuiltDependencies" : []
+    "onlyBuiltDependencies" : {
+
+    }
   }
 }
